usethis:::use_codecov_badge("poissonconsulting/ssdtests")

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # ssdtests
 
 <!-- badges: start -->
+[![Codecov test coverage](https://codecov.io/gh/poissonconsulting/ssdtests/graph/badge.svg)](https://app.codecov.io/gh/poissonconsulting/ssdtests)
 <!-- badges: end -->
 
 The goal of ssdtests is to test the ssdtools package.
