--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![CRAN status](https://www.r-pkg.org/badges/version/ssdtests)](https://cran.r-project.org/package=ssdtests)
 <!-- badges: end -->
 
-The goal of ssdtests is to test the ssdtools package.
+The goal of ssdtests is to test the [ssdtools](https://github.com/bcgov/ssdtools) package.
 
 ## Installation
 
